added changes to data.py and added numpy files to the ignore

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,9 @@ GoogleNews-vectors-negative300.bin
 # jupyter notebook
 .ipynb_checkpoints
 
+# numpy files
+*.npy
+
 # https://www.gitignore.io/api/python
+
+
